# harnesdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
CHANGELOG/: 0.1.0.md
docs/: _config.yml  blog.md  index.html
docs/_includes/: footer.html  header.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2026-04-09-getting-started-guide.md  2026-04-09-welcome-to-harnesdk.md
docs/assets/css/: main.css
src/harnesdk/: __init__.py  agent.py  claude_agent.py  cli.py  hermes_agent.py  logging_utils.py  opencode_agent.py
templates/: hermes_agent.py
