[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnesdk"
version = "0.1.0"
description = "Run major agents and harnesses programmatically, in a sandbox. Openclaw, Claude Code, Hermes agent,..."
readme = "README.md"
authors = [
  {name = "Alaeddine Abdessalem", email = "audreyfeldroy@example.com"}
]
maintainers = [
  {name = "Alaeddine Abdessalem", email = "audreyfeldroy@example.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "e2b>=2.20.0",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/alaeddine-13/harnesdk/issues"
changelog = "https://github.com/alaeddine-13/harnesdk/releases"
documentation = "https://alaeddine-13.github.io/harnesdk/"
homepage = "https://github.com/alaeddine-13/harnesdk"

[project.scripts]
harnesdk = "harnesdk.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
